--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,20 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="text/css" href="css/main.css">
+    <title>Ben Chung's Web Design</title>
+  </head>
+  <body class="body">
+    <header>
+      <h1>Ben Chung's Web Design</h1>
+    </header>
+    <article>
+      <h3>Stupendous Summer Deals</h3>
+      <h4>Get the best of the summer with amazing value Websites</h4>
+      <p>
+        A fantastic collection of deals and bundles at Ben Chungs Web Design
+      </p>
+    </article>
+  </body>
 </html>
