--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,14 @@
   </head>
   <body class="body">
     <header>
+      <img src="http://imgur.com/PpB1d6x" />
       <h1>Ben Chung's Web Design</h1>
     </header>
     <article>
       <h3>Stupendous Summer Deals</h3>
       <h4>Get the best of the summer with amazing value Websites</h4>
       <p>
-        A fantastic collection of deals and bundles at Ben Chungs Web Design
+        A fantastic collection of deals and value at Ben Chungs Web Design
       </p>
     </article>
   </body>
