--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="text/css" href="css/main.css">
     <title>Ben Chung's Web Design</title>
+    <script src="js/script.js"></script>
   </head>
   <body class="body">
     <header>
